# ComputerVisionUtils

./: LICENSE  README.md
BackgroundSubtraction/: bg_subtraction_cnt.py  bg_subtraction_gmg.py  bg_subtraction_gsoc.py  bg_subtraction_knn.py  bg_subtraction_lsbp.py  bg_subtraction_mog.py  bg_subtraction_mog2.py
ContourDetection/: contour_detection.py  contour_detection_retr_ccomp.py  contour_detection_retr_external.py  contour_detection_retr_list.py  contour_detection_simple_approx.py  contour_detection_simple_approx_points.py  contour_detection_single_channel.py
CudaOpenCV/: README.md
CudaOpenCV/Cpp/: CPUvsGPUpipeline.md  README.md
CudaOpenCV/Python/: CPUvsGPUpipeline.md  README.md
DepthMapFromStereo/: depth_map_from_stereo_BM.py  depth_map_from_stereo_SGBM.py
DockerOpenCV/Cpp/: CMakeLists.txt  Dockerfile  README.md  main.cpp
DockerOpenCV/Python/: Dockerfile  README.md
FeatureDetectorSamples/Python/: agast.py  akaze.py  algorithm_fast.py  algorithm_star.py  brisk.py  detector_fast.py  gftt.py  harris_laplace.py  harris_normal.py  harris_subpixel.py  kaze.py  mser.py  mser_color.py  orb.py  shi_tomasi.py  simple_blob_detector.py  star.py
ImageSegmentation/: image_search_segmentation.py  image_segmentation.py
ImageSegmentationOpenCV/: approx_contours_and_convex_hull.py  blob_detection.py  blob_discrimination.py  convex_hull.py  hierarchy_and_retrieval_mode.py  identify_shape.py  line_detection_hough.py  line_detection_prob_hough.py  matching_contour.py  segmentation_and_contours.py
ImageView/ImageDrawGtk2/: CMakeLists.txt  main.c
ImageView/ImageDrawGtk3/: CMakeLists.txt  main.cpp
ImageView/ImageLoadGtk2/: CMakeLists.txt  main.c
ImageView/ImageLoadGtk3/: CMakeLists.txt  main.c
ImproveIlluminationNightTime/: improve_illumination.py
MotionEstimationOpticalFlow/: dense_optical_flow.py  sparse_optical_flow.py
NoiseGeneration/Cpp/Gaussian/: CMakeLists.txt  main.cpp
NoiseGeneration/Python/: image_noise_gaussian.py  image_noise_localvar.py  image_noise_pepper.py  image_noise_poisson.py  image_noise_salt.py  image_noise_snp.py  image_noise_speckle.py
NoiseGeneration/skimage/: image_noise_gaussian.py  image_noise_snp.py  (+6 more)
ObjectTracking/: camshift.py  meanshift.py  multi_object_tracker.py  trackers.py
SecurityCamera/: security_camera.py
SemanticSegmentationOpenCV/: segment.py  segment_video.py
TemplateMatching/: multi_template_matching.py  multi_template_matching_clustering.py
(+70 files in other folders)
